# thriftnepal_backend

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
apps/audits/: admin.py  apps.py  models.py  services.py
apps/audits/migrations/: 0001_initial.py
apps/core/: apps.py  exceptions.py  minio.py  models.py  pagination.py  permissions.py  responses.py  signals.py  tokens.py  utils.py
apps/listings/: admin.py  apps.py  documents.py  enums.py  models.py  search.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/listings/fixtures/: categories.json
apps/listings/migrations/: 0001_initial.py  0002_listing_save_count_and_more.py
apps/profiles/: admin.py  apps.py  buyer_urls.py  enums.py  models.py  selectors.py  seller_urls.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
apps/profiles/migrations/: 0001_initial.py  0002_remove_sellerprofile_facebook_url_and_more.py  0003_buyerprofile.py  0004_savedlisting.py
apps/users/: admin.py  enums.py  models.py  selectors.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: celery.py  permissions.yaml  urls.py
config/settings/: base.py  dev.py  prod.py  test.py
