[project]
name = "thriftnepal-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.3",
    "django>=6.0.5",
    "django-auditlog>=3.4.1",
    "django-elasticsearch-dsl>=9.0",
    "django-environ>=0.13.0",
    "django-phonenumber-field[phonenumbers]>=8.4.0",
    "django-structlog>=10.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "elasticsearch==9.3.0",
    "minio>=7.2.20",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=40.15.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.12",
]

[tool.ruff]
extend-exclude = ["**/migrations"]
